fixed broken styles for video lightbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6719,6 +6719,129 @@ textarea.hs-input {
   justify-content: center;
 }
 
+.video-section__modal {
+  display: none;
+  opacity: 0;
+  overflow: auto;
+}
+.video-section__modal.open {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background: rgba(11, 11, 11, 0.8);
+  z-index: 10014;
+  opacity: 1;
+  -webkit-animation: fadeIn 0.2s;
+  animation: fadeIn 0.2s;
+}
+.video-section__modal-close {
+  position: absolute;
+  top: -1.6rem;
+  right: -14px;
+  z-index: 10013;
+  cursor: pointer;
+  color: #fff;
+  opacity: 0.65;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+.video-section__modal-close:hover {
+  opacity: 1;
+}
+.video-section__modal-close img {
+  width: 12px;
+}
+.video-section .wrapper {
+  position: relative;
+  display: block;
+  text-align: center;
+  z-index: 4;
+  width: 100%;
+  max-height: 100vh;
+}
+.video-section .wrapper .video-box {
+  padding: 48.75% 0 0 0;
+  position: relative;
+  width: 85%;
+  max-height: 90vh;
+  margin: 2rem auto;
+}
+.video-section .wrapper .video-box iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.video-section__cover {
+  position: relative;
+  max-width: 960px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+.video-section__cover .video-box {
+  padding: 56.25% 0 0 0;
+  position: relative;
+}
+.video-section__cover .video-box iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.video-section__cover > svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 62px;
+  z-index: 10;
+}
+.video-section__cover > svg path {
+  fill: rgba(255, 255, 255, 0.8);
+}
+.video-section__cover > svg:hover path {
+  fill: #ffffff;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .video-section__cover {
+    padding: 0 1rem;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .video-section .wrapper .video-box {
+    width: calc(100% - 12px);
+    padding: calc(56.75% - 12px) 0 0 0;
+  }
+  .video-section__cover > svg {
+    width: 50px;
+  }
+}
+.color-type-2 .video-section__cover > svg path {
+  fill: #15b7e3;
+}
+
+.color-type-2 .video-section__cover:hover > svg path {
+  fill: #3ec8ed;
+}
+
 [data-simplebar] {
   position: relative;
   flex-direction: column;
